{
    "name": "RtsInput",
    "maps": [
        {
            "name": "Player",
            "id": "7caa1c53-f027-481f-b56d-de1c99ebaea0",
            "actions": [
                {
                    "name": "OnLeftMouseButton",
                    "type": "Button",
                    "id": "f12e5dbd-58f8-43b9-bc98-cc8b8114989b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OnRightMouseButton",
                    "type": "Button",
                    "id": "7df8d19e-1cac-40c1-a4e5-cbeb07249148",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMoveRight",
                    "type": "Button",
                    "id": "9c5420c1-7280-4746-8d3c-11b9d17865cc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMoveLeft",
                    "type": "Button",
                    "id": "7c2e1164-d0e2-43f0-a36e-60c3705c970b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMoveUp",
                    "type": "Button",
                    "id": "05cf02eb-5112-4a27-afdc-13d2433b4585",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMoveDown",
                    "type": "Button",
                    "id": "37eddc1a-4ce2-4816-b0e2-a6cd4ab70143",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectGroup1",
                    "type": "Button",
                    "id": "cf3ec541-1bad-4e5f-ac73-ddfd5aede710",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectGroup2",
                    "type": "Button",
                    "id": "265c3768-9508-4429-beb2-4467acc6aa96",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectGroup3",
                    "type": "Button",
                    "id": "79f97966-417e-4331-98e6-a3f4c580f39e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectGroup4",
                    "type": "Button",
                    "id": "bb370946-8160-441b-9676-9afe30b8b863",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DeleteActor",
                    "type": "Button",
                    "id": "d1986c2f-f924-49da-8822-58d2d9f4bf38",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84e9393c-6110-44be-8255-8bf4b1aa051e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "OnLeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eec6d60c-d0b3-4fa8-bfd6-aa3794d440b3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "OnRightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2392d634-f388-41a3-b5e0-84d39c18fd73",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1cae904d-ebf1-488f-8ddc-4194354b29d9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3eefa3bd-939a-4c69-a1fb-404680f5fe79",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b38bb1e6-9678-4afb-96c9-fea14b0d32a1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMoveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72549666-7e67-43b1-a9ea-ff2f6263a01c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectGroup1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e594df3-dbb0-4def-864c-b49ab1f232ab",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectGroup2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fda12170-d47e-48bc-9cc3-e98e9fc92d23",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectGroup3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25cb50a1-52b5-45b8-98c6-1c29a8b3b1de",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectGroup4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9e0a6bf-fab4-4ad6-94d0-2b3a8bd09303",
                    "path": "<Keyboard>/delete",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DeleteActor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}